2001-12-22  Alasdair Allan <aa@astro.ex.ac.uk>

        * Original version, not fully functional.
