@@ -1,3 +1,7 @@
+2002-01-13  Alasdair Allan <aa@astro.ex.ac.uk>
+
+        * Release version, all functionality tested and in place.
+        
 2001-12-22  Alasdair Allan <aa@astro.ex.ac.uk>
 
         * Original version, not fully functional.
